<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentEWallet">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_nav"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/choresTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/e_wallet"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:translationY="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="59dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:background="#6047F7"
            android:contentDescription="@string/backToTaskNav"
            android:contextClickable="false"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ewalletTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="90dp"
            android:text="@string/paywith_e"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/atpEWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="164dp"
            android:text="@string/amountToPayMsg"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ewalletTitle" />

    <TextView
        android:id="@+id/totalAmount_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="5dp"
        android:text="@string/E_paymentAmount"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atpEWallet" />

        <TextView
            android:id="@+id/paymentDetailsTitle_E"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="54dp"
            android:text="@string/e_paymentDetails"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmount_E" />

    <TextView
        android:id="@+id/actionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/TestMsg1"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentDetailsTitle_E" />

    <TextView
        android:id="@+id/payToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="90dp"
        android:text="@string/payTo"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentDetailsTitle_E" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/appName"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payToText" />

        <Button
            android:id="@+id/ePayNowBtn"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="155dp"
            android:text="@string/payBtnMessage"
            app:backgroundTint="#309E34"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>