<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:background="#2E0112A5"
        android:backgroundTint="#2E0112A5"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/receiptTitle"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="105dp"
            android:text="@string/receiptPageTitle"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paymentIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/paymentID"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/paymentDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"
            android:text="@string/paymentDate"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/paymentMethodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:text="@string/paymentMethod"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/paymentAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="250dp"
            android:text="@string/paymentAmount"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/paidByTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="300dp"
            android:text="@string/paidBy"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/paidToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="350dp"
            android:text="@string/cName"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generatePaymentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="100dp"
            android:text="@string/paymentIDGenerated"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generatePaymentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="150dp"
            android:text="Text"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generatePaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="200dp"
            android:text="Text"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generatePaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="250dp"
            android:text="Text"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generatePaidBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="300dp"
            android:text="Text"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/generateCName"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="350dp"
            android:text="@string/paidToGenerated"
            android:textColor="#000000"
            android:textSize="16dp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6047F8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/receiptPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="15dp"
        android:text="@string/receipt"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/downloadReceiptBtn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="549dp"
        android:text="@string/downloadReceipt"
        app:backgroundTint="#309E34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>