<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#2E0112A5"
    android:padding="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="#2E0112A5">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="84dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="100dp" />

        <TextView
            android:id="@+id/choresTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/choresName"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postedByTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/postedBy"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/choresTextView2" />

        <TextView
            android:id="@+id/receivedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/received"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/postedByTextView" />

        <TextView
            android:id="@+id/dateTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dateMsg"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/receivedTextView" />

        <TextView
            android:id="@+id/workerNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/workerName"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/receivedTextView"
            app:layout_constraintStart_toEndOf="@+id/postedByTextView"
            app:layout_constraintTop_toBottomOf="@+id/choresTextView2" />

        <TextView
            android:id="@+id/receivedAmountET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/receivedAmount"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/dateTextView3"
            app:layout_constraintStart_toEndOf="@+id/receivedTextView"
            app:layout_constraintTop_toBottomOf="@+id/workerNameET" />

        <TextView
            android:id="@+id/dateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/dateTextView3"
            app:layout_constraintTop_toBottomOf="@+id/receivedAmountET" />

        <Button
            android:id="@+id/viewReceiptBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#18AE00"
            android:text="@string/viewReceipt"
            android:textSize="10sp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="99dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>